--- a/src/Components/SystemAdminView/AddUser/AddUser.css
+++ b/src/Components/SystemAdminView/AddUser/AddUser.css
@@ -7,6 +7,7 @@
   transform: translate(-50%, -50%);
   width: 36rem;
   padding-bottom: 2rem;
+  align-items: center;
   border-radius: 1.5rem;
   display: flex;
   flex-direction: column;
@@ -17,7 +18,6 @@
 #addUserForm {
   display: flex;
   flex-direction: column;
-  align-items: center;
   background: #1e1e1e;
   gap: 1.6rem;
 }
@@ -45,23 +45,22 @@
 /* Styling input/select boxes */
 #addUserMenu .inputBox {
   border: 0;
-  width: 14rem;
-  margin: auto;
   color: #1e1e1e;
   height: 2rem;
   border-radius: 0.3rem;
   font-size: 1.3rem;
   box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.2);
+  width: 60%;
 }
 
 /* Setting label name */
-.label {
+#addUserMenu .label {
   width: 11.3rem;
+  white-space: nowrap;
   font-size: 1.5rem;
   text-align: left;
   color: #f7f6f5;
   background-color: #1e1e1e;
-  margin-left: 2rem;
 }
 
 /* Styling log event heading */
@@ -72,15 +71,15 @@
 }
 
 /* Styling for all input boxes */
-.input {
-  margin: 1rem;
+#addUserMenu .input {
+  margin-bottom: 1.5rem;
+  display: flex;
 }
 
 /* Styling for the submit button */
 .addUserButton {
   margin: auto;
-  margin-top: 3rem;
-  margin-left: 40%;
+  margin-top: 1rem;
   background-color: #c5ff00;
   border: 0.1rem solid #c5ff00;
   color: #1e1e1e;
@@ -103,7 +102,6 @@
   position: relative;
 }
  
-
 .addUsericon {
   position: absolute;
   top: 20%;
